# BayesianData

./: .gitignore  CMakeLists.txt  README.md
Data/1pe2e acc/: AVIndex.txt  MomentumProbability.txt
Data/2pacc_scan_only_acc/: AVList.txt  Acceleration.txt  MomentumProbability.txt
Data/2param_acc_Option2/: AVIndex.txt  LatticeDepth.txt  MomentumProbability.txt
Data/2param_acc_Option2_finegrid/: LatticeDepth.txt  MomentumProbability.txt
Data/2pe2e_acc/: AVIndex.txt  Acceleration.txt  LatticeDepth.txt  MomentumProbability.txt
Data/Failed2pe2e_acc/: Acceleration.txt  LatticeDepth.txt
Data/Interrupted 2pe2e acc/: MomentumProbability.txt
Data/Partial_Runs/Failed2pe2e_acc/: AVIndex.txt  MomentumProbability.txt
Data/Partial_Runs/Interrupted 2pe2e acc/: AVIndex.txt  Acceleration.txt  LatticeDepth.txt
Output/: MomentumProbability.txt
Output/1param_acc_as2d_Dec28/: Acceleration.txt  MomentumProbability.txt
Output/2param_acc_Option2/: Acceleration.txt
Output/2param_acc_Option2_Dec28/: MomentumProbability.txt
Python/: Bayesian 2param.ipynb  Bayesian error test.ipynb  Bayesian.ipynb  Option1_2_comparison.ipynb  PaperFig.ipynb  Sequence2param.py  Units.py  scratch.ipynb
Python/2param_Option2_Plots/: Bayesian 2param.ipynb
include/: Environment_MhollandRL.hpp  Wavepacket.hpp
src/: Compare.cpp  Generate.cpp  Simulate_Momentum.cpp  Simulate_Momentum.cpp~
